--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "amazon-chime-sdk-component-library-react",
-  "version": "1.6.0",
-  "description": "Amazon Chime SDK Component Library - React",
+  "name": "@galliumsoft/custom-aws-chime-sdk-react",
+  "version": "0.1.0",
+  "description": "Customized fork of the wonderful AWS Chime SDK Component Library - React",
   "main": "lib/index.js",
   "module": "lib/index.esm.js",
   "files": [
@@ -9,7 +9,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/aws/amazon-chime-sdk-component-library"
+    "url": "https://github.com/galliumsoft/amazon-chime-sdk-component-library.git"
   },
   "types": "lib/index.d.ts",
   "scripts": {
@@ -34,13 +34,14 @@
     "jest:integration-playwright": "jest -c jest-snapshot-playwright.config.js --verbose ./tst/snapshots-playwright/*"
   },
   "keywords": [],
-  "author": "",
+  "author": "Madhukar I B",
   "license": "Apache-2.0",
   "dependencies": {
     "@popperjs/core": "^2.2.2",
     "@types/puppeteer": "^2.0.1",
     "@types/uuid": "^7.0.3",
     "fast-memoize": "^2.5.2",
+    "react-draggable": "^4.4.3",
     "react-popper": "^2.2.1",
     "throttle-debounce": "^2.3.0",
     "uuid": "^8.0.0"
@@ -96,7 +97,7 @@
     "rollup-plugin-peer-deps-external": "^2.2.2",
     "rollup-plugin-typescript2": "^0.27.1",
     "start-server-and-test": "^1.11.3",
-    "storybook": "^6.1.6",
+    "storybook": "^6.1.11",
     "style-loader": "^0.23.1",
     "styled-components": "^5.1.0",
     "styled-system": "^5.1.5",
@@ -117,5 +118,9 @@
   },
   "prettier": {
     "singleQuote": true
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/aws/amazon-chime-sdk-component-library/issues"
+  },
+  "homepage": "https://github.com/aws/amazon-chime-sdk-component-library#readme"
 }
